add deny_new_usb setting
Change-Id: If4ee98d636e1876ba546f8a5d562859e8ab7b931

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -7956,4 +7956,6 @@
     <string name="protected_apps">Protected apps</string>
     <string name="saving_protected_components">Saving component state</string>
 
+    <string name="deny_new_usb_title">USB accessories</string>
+    <string name="deny_new_usb_summary">Control support for USB peripherals such as input (mice, keyboards, joysticks) and storage devices.</string>
 </resources>
