--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -2385,6 +2385,9 @@
     <string name="kernel_version">Kernel version</string>
     <!-- About phone screen,  setting option name  [CHAR LIMIT=40] -->
     <string name="build_number">Build number</string>
+    <!-- About phone screen, SDCLANG Compiler  [CHAR LIMIT=40] -->
+    <string name="build_compiler_sdclang">SDClang version</string>
+    <string name="build_compiler_default">Unknown</string>
     <!-- About phone screen,  setting option name  [CHAR LIMIT=40] -->
     <string name="qgp_version">QGP Version</string>
     <!-- About phone screen,  setting option name  [CHAR LIMIT=40] -->
